--- a/my_app/templates/my_app/contact.html
+++ b/my_app/templates/my_app/contact.html
@@ -164,7 +164,7 @@
   </div>
   <div class="col">
     <div class="card">
-      <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3154.089629422328!2d144.9203218752423!3d-37.764496531222804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65cf3888b3701%3A0x78ee489e1edcec8f!2s701%20Mt%20Alexander%20Rd%2C%20Moonee%20Ponds%20VIC%203039%2C%20Australia!5e0!3m2!1sen!2sus!4v1752232126350!5m2!1sen!2sus" allowfullscreen loading="lazy"></iframe>
+      <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m12!1m8!1m3!1d111345.47919154877!2d79.513422!3d29.295649!3m2!1i1024!2i768!4f13.1!2m1!1sNeemkaroli%20House%2C%20Haldwani%20Uttarakhand%20%3A%20262139!5e0!3m2!1sen!2sus!4v1752474119585!5m2!1sen!2sus" allowfullscreen loading="lazy"></iframe>
       <div class="card-body">
         <h5 class="card-title text-center"><b>Training Center</b></h5>
 
@@ -191,7 +191,7 @@
   </div>
   <div class="col">
     <div class="card">
-      <iframe class="map" src="https://www.google.com/maps/embed?pb=..." allowfullscreen loading="lazy"></iframe>
+      <iframe class="map"src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12616.357755388004!2d144.922897!3d-37.764501!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65cf3888b3701%3A0x78ee489e1edcec8f!2s701%20Mt%20Alexander%20Rd%2C%20Moonee%20Ponds%20VIC%203039%2C%20Australia!5e0!3m2!1sen!2sus!4v1752473874578!5m2!1sen!2sus" allowfullscreen loading="lazy"></iframe>
       <div class="card-body">
         <h5 class="card-title text-center"><b>Sales Office</b></h5>
 
