--- a/my_app/templates/my_app/career.html
+++ b/my_app/templates/my_app/career.html
@@ -8,27 +8,17 @@
         justify-content: center;
         align-items: center;
         padding: 60px 10%;
-        background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+        background: linear-gradient(to right, #0a5879ff, #108bb4ff, #2c5364);
         color: white;
     }
     .text-section{
-        font-size:30px;
+        font-size:40px;
+    }
+    .my-section span{
+        font-size:20px;
     }
 
-.career-section {
-    max-width: 1200px;
-    margin: 50px auto;
-    padding: 30px;
-    font-family: 'Segoe UI', sans-serif;
-}
 
-.career-title {
-    text-align: center;
-    font-size: 36px;
-    font-weight: bold;
-    margin-bottom: 40px;
-    color: #333;
-}
 
 .job-grid {
     display: grid;
@@ -37,7 +27,7 @@
 }
 
 .job-card {
-    background-color: #ffffff;
+    background-color: #f2eaeaff;
     border-radius: 10px;
     padding: 25px;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
