--- a/my_app/templates/my_app/contact.html
+++ b/my_app/templates/my_app/contact.html
@@ -129,7 +129,10 @@
           {{ myData.message }}
           <label for="{{ myData.message.id_for_label }}">Your Message</label>
         </div>
-        <button class="btn btn-outline-dark btn-animate ">Submit</button>
+       <a href="mailto:sales@neemkarolitechnologies.com" class="btn btn-outline-dark btn-animate">
+  Submit
+</a>
+
       </form>
     </div>
   </div>
