--- a/my_app/templates/my_app/contact.html
+++ b/my_app/templates/my_app/contact.html
@@ -129,10 +129,9 @@
           {{ myData.message }}
           <label for="{{ myData.message.id_for_label }}">Your Message</label>
         </div>
-       <a href="mailto:sales@neemkarolitechnologies.com" class="btn btn-outline-dark btn-animate">
+       <a href="mailto:ashadevi67531@gmail.com" class="btn btn-outline-dark btn-animate">
   Submit
 </a>
-
       </form>
     </div>
   </div>
