--- a/my_app/templates/my_app/contact.html
+++ b/my_app/templates/my_app/contact.html
@@ -129,8 +129,8 @@
           {{ myData.message }}
           <label for="{{ myData.message.id_for_label }}">Your Message</label>
         </div>
-       <a href="mailto:ashadevi67531@gmail.com" class="btn btn-outline-dark btn-animate">
-  Submit
+       <a href="sales@neemkarolitechnologies.com">
+  <button class="btn btn-outline-dark btn-animate">Submit</button>
 </a>
       </form>
     </div>
