--- a/my_app/templates/my_app/contact.html
+++ b/my_app/templates/my_app/contact.html
@@ -107,34 +107,41 @@
     </div>
     <div class="col-lg-6 fade-in">
       <h3 class="mb-4">Have A Question?</h3>
-      <form method="POST" action="#">
-        {% csrf_token %}
-        <div class="form-floating mb-3">
-          {{ myData.name }}
-          <label for="{{ myData.name.id_for_label }}">Full Name</label>
-        </div>
-        <div class="form-floating mb-3">
-          {{ myData.email }}
-          <label for="{{ myData.email.id_for_label }}">Email</label>
-        </div>
-        <div class="form-floating mb-3">
-          {{ myData.phone }}
-          <label for="{{ myData.phone.id_for_label }}">Mobile Number</label>
-        </div>
-        <div class="form-floating mb-3">
-          {{ myData.designation }}
-          <label for="{{ myData.designation.id_for_label }}">Designation</label>
-        </div>
-        <div class="form-floating mb-3">
-          {{ myData.message }}
-          <label for="{{ myData.message.id_for_label }}">Your Message</label>
-        </div>
-       <a href="sales@neemkarolitechnologies.com">
-  <button class="btn btn-outline-dark btn-animate">Submit</button>
-</a>
-      </form>
-    </div>
+      <form method="POST">
+  {% csrf_token %}
+  <div class="form-floating mb-3">
+    {{ myData.name }}
+    <label for="{{ myData.name.id_for_label }}">Full Name</label>
   </div>
+  <div class="form-floating mb-3">
+    {{ myData.email }}
+    <label for="{{ myData.email.id_for_label }}">Email</label>
+  </div>
+  <div class="form-floating mb-3">
+    {{ myData.phone }}
+    <label for="{{ myData.phone.id_for_label }}">Mobile Number</label>
+  </div>
+  <div class="form-floating mb-3">
+    {{ myData.designation }}
+    <label for="{{ myData.designation.id_for_label }}">Designation</label>
+  </div>
+  <div class="form-floating mb-3">
+    {{ myData.message }}
+    <label for="{{ myData.message.id_for_label }}">Your Message</label>
+  </div>
+
+  <button type="submit" class="btn btn-outline-dark btn-animate">Submit</button>
+
+ {% if messages %}
+  {% for message in messages %}
+    <div class="alert alert-success" role="alert">
+      ✅ {{ message }}
+    </div>
+  {% endfor %}
+{% endif %}
+</form>
+</div>
+</div>
 </div>
 
 <div class="row row-cols-1 row-cols-md-3 g-4  me-0">
