--- a/templates/layout.html
+++ b/templates/layout.html
@@ -74,7 +74,7 @@
 }
 
 .animated-image {
-  width: 300px;
+  width: 500px;
   position: absolute;
   top: 50px;
   animation: floatImage 3s ease-in-out infinite, fadeIn 1.1s ease forwards;
@@ -370,7 +370,7 @@
   <div class="col-lg-5 col-md-5 image-container">
     <img src="{% static 'image/expressive-young-lady-posing-studio-removebg-preview.png' %}"
          alt="Big Image"
-         class="img-fluid w-100 animated-image"
+         class="img-fluid  animated-image"
          style="max-height: 500px; object-fit: cover;">
   </div>
 </div><br><br>
