--- a/templates/layout.html
+++ b/templates/layout.html
@@ -333,8 +333,13 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url "my_app:career" %}" style="color:#063970;"><b>Career</b></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link " href="#" style="color:#063970;"><b>Partner programs</b></a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" style="color:#063970;"href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <b>Partner Programs</b></a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">B2B Partner Programs</a></li>
+                                <li><a class="dropdown-item" href="#">Referral Programs</a></li>
+                            </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link " href="{% url "my_app:contact" %}" style="color:#063970;"><b>Contact us</b></a>
