--- a/templates/layout.html
+++ b/templates/layout.html
@@ -337,7 +337,7 @@
                             <a class="nav-link dropdown-toggle" style="color:#063970;"href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <b>Partner Programs</b></a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">B2B Partner Programs</a></li>
+                                <li><a class="dropdown-item" href="{% url "my_app:b2b" %}">B2B Partner Programs</a></li>
                                 <li><a class="dropdown-item" href="#">Referral Programs</a></li>
                             </ul>
                         </li>
