--- a/my_app/templates/my_app/job_detail.html
+++ b/my_app/templates/my_app/job_detail.html
@@ -39,7 +39,7 @@
 
 .job-tags span {
     display: inline-block;
-    background: #f1f1f1;
+    background: #37d4e0ff;
     color: #333;
     font-size: 14px;
     padding: 6px 12px;
@@ -87,7 +87,7 @@
     </div>
 
     <div class="job-description">
-        {{ job.description|linebreaks }}
+        <strong>Description</strong>{{ job.description|linebreaks }}
     </div>
 
     <a href="{% url 'my_app:contact' %}" class="apply-btn">Apply Now</a>
