--- a/my_app/templates/my_app/career.html
+++ b/my_app/templates/my_app/career.html
@@ -116,6 +116,7 @@
   <button class="filter-btn" data-job-type="Full Time">Full Time</button>
   <button class="filter-btn" data-job-type="Part Time">Part Time</button>
   <button class="filter-btn" data-job-type="Internship">Internship</button>
+  <button class="filter-btn" data-job-type="hybrid">hybrid</button>
 </div>
 
 
