--- a/my_app/templates/my_app/job_detail.html
+++ b/my_app/templates/my_app/job_detail.html
@@ -24,6 +24,7 @@
     font-size: 16px;
     color: #666;
     margin-bottom: 20px;
+    line-height: 1.8;
 }
 
 .job-description {
@@ -68,17 +69,19 @@
         font-size: 26px;
     }
 
-.job-description {
+    .job-description {
         font-size: 16px;
     }
 }
 </style>
 
-  <div class="job-detail-container">
+<div class="job-detail-container">
     <h1 class="job-title">{{ job.title }}</h1>
+    
     <div class="job-meta">
         <strong>Location:</strong> {{ job.location }} <br>
-        <strong>Type:</strong> {{ job.job_type }}
+        <strong>Type:</strong> {{ job.job_type }} <br>
+        <strong>Salary Range:</strong> {{ job.salary_range }}
     </div>
 
     <div class="job-tags">
@@ -87,7 +90,8 @@
     </div>
 
     <div class="job-description">
-        <strong>Description</strong>{{ job.description|linebreaks }}
+        <strong>Description</strong><br>
+        {{ job.description|linebreaks }}
     </div>
 
     <a href="{% url 'my_app:contact' %}" class="apply-btn">Apply Now</a>
